--- a/robot_navigation/param/local_costmap_params.yaml
+++ b/robot_navigation/param/local_costmap_params.yaml
@@ -6,7 +6,7 @@ local_costmap:
   publish_frequency: 2.0
   transform_tolerance: 5  
 
-
+  static_map: false
   rolling_window: true
   width: 2
   height: 2
