--- a/robot_navigation/param/costmap_common_params.yaml
+++ b/robot_navigation/param/costmap_common_params.yaml
@@ -9,5 +9,4 @@ cost_scaling_factor: 3.0
 
 map_type: costmap
 observation_sources: scan
-scan: {sensor_frame: base_scan, data_type: LaserScan, topic: scan, marking: true, clearing: true, min_obstacle_height: -10.0, 
-max_obstacle_height: 10.0 }
+scan: {sensor_frame: lidar_link, data_type: LaserScan, topic: scan, marking: true, clearing: true}
