--- a/robot_navigation/param/costmap_common_params.yaml
+++ b/robot_navigation/param/costmap_common_params.yaml
@@ -1,13 +1,12 @@
-obstacle_range: 3.0
-raytrace_range: 3.5
+obstacle_range: 1.0
+raytrace_range: 3.0
 
-footprint: [[-0.15, -0.15], [-0.15, 0.15], [0.15, 0.15], [0.15, -0.15]]
+#footprint: [[-0.105, -0.105], [-0.105, 0.105], [0.041, 0.105], [0.041, -0.105]]
 robot_radius: 0.15
 
-inflation_radius: 0.25
+inflation_radius: 0.3
 cost_scaling_factor: 3.0
 
 map_type: costmap
 observation_sources: scan
-scan: {sensor_frame: lidar_link, data_type: LaserScan, topic: scan, marking: true, clearing: true, min_obstacle_height: -10.0, 
-max_obstacle_height: 10.0 }
+scan: {sensor_frame: lidar_link, data_type: LaserScan, topic: scan, marking: true, clearing: true}
