--- a/thesis_robot_bringup/param/global_costmap_params.yaml
+++ b/thesis_robot_bringup/param/global_costmap_params.yaml
@@ -4,6 +4,12 @@ global_costmap:
 
   update_frequency: 5.0
   publish_frequency: 5.0
-  transform_tolerance: 5
+  transform_tolerance: 5.0
 
-  static_map: true
+  #static_map: true
+  rolling_window: true 
+
+  plugins: 
+    - {name: static_layer, type: "costmap_2d::StaticLayer"} 
+    - {name: obstacle_layer, type: "costmap_2d::VoxelLayer"} 
+    - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
